Fix text overflow

--- a/src/app/user/issues/components/chatTitleBar/chatTitleBar.module.css
+++ b/src/app/user/issues/components/chatTitleBar/chatTitleBar.module.css
@@ -23,6 +23,7 @@
   text-overflow: ellipsis;
   padding: 0 10px;
   text-align: center;
+  max-width: calc(100vw - 50px);
 }
 
 @media (min-width: 768px) {
